[package]
name = "playwright"
version = "0.1.0"
edition = "2021"
description = "playwright"
authors = ["Vasanth Kumar Kalaiselvan <itsparser@gmail.com>"]
keywords = ["playwright", "Automation", "testing", "automation-tool"]
license = "MIT"
readme = "README.md"
include = ["src/**/*", "tests/**/*", "Cargo.toml", "LICENSE"]
repository = "https://github.com/workfoxes/playwright"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
serde = "1.0.117"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }